inference/client/proxy/proxy-config.yaml
static_resources:
  listeners:
  # Outbound network traffic listener.
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 15001
    listener_filters:
    - name: "envoy.filters.listener.original_dst"
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.listener.original_dst.v3.OriginalDst
    - name: "envoy.filters.listener.http_inspector"
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.listener.http_inspector.v3.HttpInspector
    - name: "envoy.filters.listener.tls_inspector"
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector 
    filter_chains:
    - filter_chain_match:
      filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config: 
          '@type': "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
          stat_prefix: outbound_proxy
          forward_client_cert_details: ALWAYS_FORWARD_ONLY
          route_config: 
            name: all
            virtual_hosts:
              - name: outbound-pass-through 
                domains: 
                  - '*'
                routes:
                  - match: { prefix: "/"}
                    route:
                      cluster: outbound-pass-through 
          http_filters:
          - name: envoy.filters.http.dynamic_forward_proxy
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
              dns_cache_config:
                name: dynamic_forward_proxy_cache_config
                dns_lookup_family: V4_ONLY
                dns_resolution_config:
                  resolvers:
                  - socket_address:
                      address: "10.50.10.50"
                      port_value: 53
                  dns_resolver_options:
                    use_tcp_for_dns_lookups: true
                    no_default_search_domain: true
          - name: envoy.filters.http.router    
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
  clusters:
  - name: outbound-pass-through
    lb_policy: CLUSTER_PROVIDED
    cluster_type:
      name: envoy.clusters.dynamic_forward_proxy
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
        dns_cache_config:
          name: dynamic_forward_proxy_cache_config
          dns_lookup_family: V4_ONLY
          dns_resolution_config:
            resolvers:
            - socket_address:
                address: "10.50.10.50"
                port_value: 53
            dns_resolver_options:
              use_tcp_for_dns_lookups: true
              no_default_search_domain: true
    transport_socket:
      name: envoy.transport_sockets.att_tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.att_tls.v3.UpstreamAttTlsContext
        attested_tls_context:
          validation_context:
            attestation_service_trusted_keys:
                filename: attestation-service-key.pem
        upstream_tls_context:
          common_tls_context:
            tls_params:
              tls_minimum_protocol_version: TLSv1_3
              tls_maximum_protocol_version: TLSv1_3
            validation_context:
              trust_chain_verification: ACCEPT_UNTRUSTED
